# rpSVG

./: .gitignore  LICENSE  README.md  do_build.sh  do_test.sh  pip_install.txt  pip_list.txt  pytest.ini  setup.cfg  setup.py
rpSVG/: Basics.py  Constructs.py  Geometry.py  SVGLib.py  SVGStyleText.py  Structs.py  Symbols.py
rpcbSVG/: BasicGeom.py  Basics.py  Constructs.py  Geometry.py  SVGLib.py  SVGstyle.py  Structs.py  Symbols.py
src/rpSVG/: Constructs.py  Geometry.py  SVGLib.py  Structs.py  Symbols.py  _cairo_textwidth.py  _multipagePDF_support.py
test/: test_00Geometry.py  test_01first.py  test_02second.py  test_03third.py  test_04fourth.py  test_05fifth.py  test_06sixth.py  test_basic.py  test_first.py  test_second.py  test_third.py  testing.py
tests/: __test_07seventh.py  pytest.ini  test_00Geometry.py  test_01first.py  test_02second.py  test_03third.py  test_04fourth.py  test_05fifth.py  test_06sixth.py  testing.py
