[metadata]
name = example-package-YOUR-USERNAME-HERE
version = 0.9.0
author = Rui Pedro Cavaco Barrosa
author_email = rpcavaco@gmail.com
description = An SVG generating package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rpcavaco/rpSVG
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
	lxml>=4.4.1
	cairosvg>=2.5.1

[options.packages.find]
where = src